[package]
name = "ndi-sdk-rsllm"
version = "0.1.2"
license = "MIT/Apache-2.0"
authors = ["Julian Waller <git@julusian.co.uk>", "Chris Kennedy <c@groovy.org>"]
edition = "2018"
repository = "https://github.com/groovybits/rust-ndi"
description = "NDI Bindings for RsLLM"

build = "build.rs"

[features]
dynamic-link = []

[dependencies]
ptrplus = "1.0"
libloading = "0.7.3"

[dev-dependencies]
png = "0.14.0"
